# mci-rs

./: Cargo.toml
src/: lib.rs  mci.rs  mci_card.rs  mmc_card.rs  transaction.rs
src/bus/: mod.rs
src/bus/spi/: adtc.rs  bus.rs  mod.rs  read.rs  response.rs  write.rs
src/card/: card.rs  mmc.rs  mod.rs  spi.rs
src/command_arguments/: mci_command.rs
src/controller/: controller.rs  mod.rs  sdcard.rs  sdio.rs  sdmmc.rs  spi.rs
src/functions/: mci.rs  mmc.rs  mod.rs  sd.rs  sdmmc.rs
src/registers/: csd.rs
